# libaltair

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  configure.ac  configure.in  doxygen.conf
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/: Makefile.am  config.h.in  transplant.h
include/altair/: ArgumentError.hxx  ArgumentOutOfRangeError.hxx  Array.hxx  ArrayedCollection.hxx  Association.hxx  BadReturnError.hxx  Bag.hxx  Behavior.hxx  Boolean.hxx  ByteArray.hxx  Character.hxx  CharacterArray.hxx  Class.hxx  ClassDescription.hxx  Collection.hxx  CompiledBlock.hxx  ContextPart.hxx  Dictionary.hxx  ElementNotFoundError.hxx  EmptyCollectionError.hxx  Encoding.hxx  Error.hxx  HashedCollection.hxx  IOChannel.hxx  IdentitySet.hxx  IndexOutOfRangeError.hxx  Integer.hxx  InvalidArgumentError.hxx  InvalidSizeError.hxx  InvalidValueError.hxx  Iteratable.hxx  Iterator.hxx  List.hxx  LookupKey.hxx  LookupTable.hxx  Magunitude.hxx  Makefile.am  NoRunnableProcessError.hxx  NotEnoughElementsError.hxx  NotFoundError.hxx  (+32 more)
src/: Array.cpp  ArrayedCollection.cpp  Bag.cpp  Behavior.cpp  ByteArray.cpp  Class.cpp  Collection.cpp  ContextPart.cpp  Dictionary.cpp  HashedCollection.cpp  Iterable.cpp  Iteratable.cpp  Makefile.am  Makefile.in  Object.cpp  ObjectMemory.cpp  OrderedCollection.cpp  PositionableStream.cpp  Random.cpp  SequenceableCollection.cpp  Set.cpp  Stream.cpp  String.cpp  UndefinedObject.cpp
tests/: Makefile.am
tests/helloworld/: Makefile.am  helloworld.cpp
