#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(libaltair, 0.1, ned.rihine@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([include/altair/Object.hxx])
AC_CONFIG_HEADERS([include/config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT8_T
AC_TYPE_UINT32_T
AC_C_VOLATILE

# Checks for library functions.
AC_PROG_RANLIB
AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
