#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT(libaltair, 0.1, ned.rihine@gmail.com)
AC_CONFIG_MACRO_DIR([build/m4])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/Object.cpp])
AC_CONFIG_HEADERS([include/config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_LANG_CPLUSPLUS
AC_LIBTOOL_WIN32_DLL

AC_ARG_ENABLE(tests,
    AC_HELP_STRING([--enable-tests],
        [enable test suites [default=no]]),
    , enable_tests=no)
AC_ARG_ENABLE(debug,
    AC_HELP_STRING([--enable-debug],
        [use 'DEBUG' configuration [default=no]]),
    , enable_debug=no)

if test x$enable_debug = xyes; then
  CFLAGS="$CFLAGS -g -W -Wall"
else
  CFLAGS="$CFLAGS -O2 -W -Wall"
fi

AC_DEFINE([ALTAIR_BUILD], [1], [build the libaltair])

AM_CONDITIONAL(TESTS, test x$enable_tests = xyes)

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDBOOL

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_C_VOLATILE
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT8_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_CONFIG_FILES([
    Makefile
    include/Makefile
    include/altair/Makefile
    src/Makefile])
AC_OUTPUT
