# noinst_LIBRARIES = libaltair.a
lib_LTLIBRARIES = libaltair.la

# libaltair_a_SOURCES = \
# 	Class.cpp \
# 	Collection.cpp \
# 	Iterable.cpp \
# 	Object.cpp \
# 	ObjectMemory.cpp \
# 	Random.cpp \
# 	String.cpp
libaltair_la_SOURCES = Class.cpp  Collection.cpp  Iteratable.cpp  Object.cpp  ObjectMemory.cpp  Random.cpp  SequenceableCollection.cpp  String.cpp
