# noinst_LIBRARIES = libaltair.a
lib_LTLIBRARIES = libaltair.la

libaltair_la_SOURCES =   \
	Array.cpp  \
	ArrayedCollection.cpp  \
	Bag.cpp  \
	ByteArray.cpp  \
	Class.cpp  \
	Collection.cpp  \
	Iteratable.cpp  \
	Object.cpp  \
	ObjectMemory.cpp  \
	Random.cpp  \
	SequenceableCollection.cpp  \
	Stream.cpp  \
	String.cpp
