# noinst_LIBRARIES = libaltair.a
lib_LTLIBRARIES = libaltair.la

libaltair_la_SOURCES =   \
	Array.cpp  \
	ArrayedCollection.cpp  \
	Bag.cpp  \
	Behavior.cpp  \
	ByteArray.cpp  \
	Class.cpp  \
	Collection.cpp  \
	Dictionary.cpp  \
	HashedCollection.cpp  \
	Iteratable.cpp  \
	Object.cpp  \
	ObjectMemory.cpp  \
	OrderedCollection.cpp  \
	PositionableStream.cpp  \
	Random.cpp  \
	SequenceableCollection.cpp  \
	Set.cpp  \
	Stream.cpp  \
	String.cpp
