
libaltairincludedir = $(includedir)/altair

libaltairinclude_HEADERS = macro.h  transplant.h  \
	Array.hxx  \
	ArrayedCollection.hxx  \
	CharacterArray.hxx  \
	Class.hxx  \
	ClassDescription.hxx  \
	Collection.hxx  \
	CompiledBlock.hxx  \
	Error.hxx  \
	IdentitySet.hxx  \
	InvalidValueError.hxx  \
	Iteratable.hxx  \
	Iterator.hxx  \
	List.hxx  \
	Object.hxx  \
	ObjectMemory.hxx  \
	OrderedCollection.hxx  \
	Random.hxx  \
	SequenceableCollection.hxx  \
	String.hxx
