
libaltairincludedir = $(includedir)/altair

libaltairinclude_HEADERS =  \
	altair_prefix.h	 \
	cast.h  \
	macro.h  \
	platform.h  \
	transplant.h  \
	Array.hxx  \
	ArrayedCollection.hxx  \
	Behavior.hxx  \
	ByteArray.hxx  \
	CharacterArray.hxx  \
	Class.hxx  \
	ClassDescription.hxx  \
	Collection.hxx  \
	CompiledBlock.hxx  \
	ElementNotFoundError.hxx  \
	EmptyCollectionError.hxx  \
	Error.hxx  \
	IdentitySet.hxx  \
	InvalidValueError.hxx  \
	Iteratable.hxx  \
	Iterator.hxx  \
	List.hxx  \
	NotFoundError.hxx  \
	Object.hxx  \
	ObjectMemory.hxx  \
	OrderedCollection.hxx  \
	Random.hxx  \
	SequenceableCollection.hxx  \
	Stream.hxx  \
	String.hxx
