
libaltairincludedir = $(includedir)/altair

libaltairinclude_HEADERS =  \
	altair_prefix.h	 \
	cast.h  \
	macro.h  \
	platform.h  \
	transplant.h  \
	ArgumentError.hxx  \  \
	ArgumentOutOfRangeError.hxx  \
	Array.hxx  \
	ArrayedCollection.hxx  \
	Bag.hxx  \
	Behavior.hxx  \
	ByteArray.hxx  \
	Character.hxx  \
	CharacterArray.hxx  \
	Class.hxx  \
	ClassDescription.hxx  \
	Collection.hxx  \
	CompiledBlock.hxx  \
	ElementNotFoundError.hxx  \
	EmptyCollectionError.hxx  \
	Error.hxx  \
	HashedCollection.hxx  \
	IdentitySet.hxx  \
	IndexOutOfRangeError.hxx  \
	Integer.hxx  \
	InvalidSizeError.hxx  \
	InvalidValueError.hxx  \
	Iteratable.hxx  \
	Iterator.hxx  \
	List.hxx  \
	Magunitude.hxx  \
	NotFoundError.hxx  \
	NotIndexableError.hxx  \
	Number.hxx  \
	Object.hxx  \
	ObjectMemory.hxx  \
	OrderedCollection.hxx  \
	PositionableStream.hxx  \
	Random.hxx  \
	ReadStream.hxx  \
	SequenceableCollection.hxx  \
	Set.hxx  \
	SortedCollection.hxx  \
	Stream.hxx  \
	String.hxx  \
	Transcript.hxx  \
	UnicodeString.hxx  \
	WriteStream.hxx
